Test/senamic_test/jlj_test/test2.output
Error type 1 at Line 19: Undefined variable "d"
Error type 5 at Line 19: Type mismatched for assignment "="
Error type 2 at Line 25: Undefined function "func8"
Error type 9 at Line 28: Function is not applicable for arguments ""
Error type 9 at Line 30: Function is not applicable for arguments ""
Error type 19 at Line 41: Inconsistent declaration of function "func3"
Error type 3 at Line 54: Redefined variable "a"
Error type 18 at Line 14: Undefined function "func7"
Error type 18 at Line 13: Undefined function "func6"
Error type 18 at Line 12: Undefined function "func5"
Error type 18 at Line 10: Undefined function "func3"
